--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mapbox/polyline": "^1.2.1",
     "@maplibre/maplibre-react-native": "^10.4.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@shopify/react-native-skia": "2.2.12",
     "@tanstack/query-async-storage-persister": "^5.90.14",
     "@tanstack/react-query": "^5.90.12",
@@ -21,7 +22,9 @@
     "axios": "^1.13.2",
     "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.30",
+    "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.12",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-localization": "~17.0.8",
     "expo-router": "~6.0.21",
