Use API key in a keystore as login for now (change to OAuth in the future), add startup login page, fix stats charts, add time chips to activities, and compare to previous period

--- a/app.json
+++ b/app.json
@@ -33,7 +33,8 @@
       "expo-router",
       "expo-localization",
       "@maplibre/maplibre-react-native",
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
