--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-localization": "~17.0.8",
     "expo-location": "~19.0.8",
     "expo-router": "~6.0.21",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
