--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo": "~54.0.30",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.12",
+    "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-localization": "~17.0.8",
