--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,9 +119,9 @@ jobs:
           retention-days: 30
 
   build-ios:
-    name: Build iOS Simulator
+    name: Build iOS App
     needs: [test, version]
-    runs-on: macos-14
+    runs-on: macos-15
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -150,24 +150,26 @@ jobs:
         working-directory: ios
         run: pod install
 
-      - name: Build iOS Simulator app
+      - name: Build iOS app (unsigned)
         run: |
           xcodebuild -workspace ios/velox.xcworkspace \
             -scheme velox \
             -configuration Release \
-            -sdk iphonesimulator \
+            -sdk iphoneos \
             -derivedDataPath ios/build \
-            -destination 'generic/platform=iOS Simulator' \
+            -destination 'generic/platform=iOS' \
+            CODE_SIGN_IDENTITY="-" \
+            CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO \
             | xcpretty || true
 
-      - name: Package .app for Appetize
+      - name: Package unsigned .app
         run: |
           mkdir -p artifacts
           APP_PATH=$(find ios/build -name "*.app" -type d | head -1)
           if [ -n "$APP_PATH" ]; then
             cd "$(dirname "$APP_PATH")"
-            zip -r "$GITHUB_WORKSPACE/artifacts/${{ needs.version.outputs.filename }}-ios-simulator.zip" "$(basename "$APP_PATH")"
+            zip -r "$GITHUB_WORKSPACE/artifacts/${{ needs.version.outputs.filename }}-ios.zip" "$(basename "$APP_PATH")"
           fi
 
       - name: Upload iOS artifact
