--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -163,33 +163,37 @@ jobs:
         working-directory: ios
         run: pod install
 
-      - name: Build iOS app (unsigned)
+      - name: List available schemes
+        run: xcodebuild -workspace ios/velox.xcworkspace -list
+
+      - name: Build iOS Simulator app
         run: |
           xcodebuild -workspace ios/velox.xcworkspace \
-            -scheme velox \
+            -scheme Velox \
             -configuration Release \
-            -sdk iphoneos \
+            -sdk iphonesimulator \
+            -arch x86_64 \
             -derivedDataPath ios/build \
-            -destination 'generic/platform=iOS' \
-            CODE_SIGN_IDENTITY="-" \
-            CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO \
-            | xcpretty || true
+            CODE_SIGNING_ALLOWED=NO
 
-      - name: Package unsigned .app
+      - name: Package .app for Appetize
         run: |
           mkdir -p artifacts
-          APP_PATH=$(find ios/build -name "*.app" -type d | head -1)
+          APP_PATH=$(find ios/build/Build/Products/Release-iphonesimulator -name "*.app" -type d | head -1)
           if [ -n "$APP_PATH" ]; then
             cd "$(dirname "$APP_PATH")"
-            zip -r "$GITHUB_WORKSPACE/artifacts/${{ needs.version.outputs.filename }}-ios.zip" "$(basename "$APP_PATH")"
+            zip -r "$GITHUB_WORKSPACE/artifacts/${{ needs.version.outputs.filename }}-ios-simulator.zip" "$(basename "$APP_PATH")"
+          else
+            echo "ERROR: No .app found!"
+            find ios/build -name "*.app" -type d
+            exit 1
           fi
 
       - name: Upload iOS artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ios-${{ needs.version.outputs.filename }}
-          path: artifacts/*.zip
+          name: ios-simulator-${{ needs.version.outputs.filename }}
+          path: artifacts/*-ios-simulator.zip
           retention-days: 30
 
   release:
@@ -209,7 +213,7 @@ jobs:
       - name: Download iOS artifact
         uses: actions/download-artifact@v4
         with:
-          name: ios-${{ needs.version.outputs.filename }}
+          name: ios-simulator-${{ needs.version.outputs.filename }}
           path: artifacts/
 
       - name: Upload to Release
