--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/query-async-storage-persister": "^5.90.14",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-persist-client": "^5.90.14",
+    "@types/rbush": "^4.0.0",
     "axios": "^1.13.2",
     "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.30",
@@ -37,6 +38,7 @@
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
+    "rbush": "^4.0.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
