--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "victory-native": "^41.20.2",
-    "zustand": "^5.0.9"
+    "zustand": "^5.0.9",
+    "route-matcher-native": "file:./modules/route-matcher-native"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
