--- a/modules/route-matcher-native/android/build.gradle
+++ b/modules/route-matcher-native/android/build.gradle
@@ -59,6 +59,53 @@ repositories {
   mavenCentral()
 }
 
+// Task to build Rust libraries if needed
+task buildRustLibraries {
+  def jniLibsDir = file("src/main/jniLibs/arm64-v8a")
+  def rustLibrary = new File(jniLibsDir, "libroute_matcher.so")
+  def kotlinBindings = file("src/main/java/uniffi/route_matcher/route_matcher.kt")
+  def buildScript = file("${project.rootDir}/../rust/route-matcher/scripts/build-android.sh")
+  def installScript = file("${project.rootDir}/../rust/route-matcher/scripts/install-android.sh")
+
+  outputs.files(rustLibrary)
+
+  doLast {
+    def needsBuild = !rustLibrary.exists()
+
+    // Also check if bindings have the HTTP functions (fetchActivityMaps)
+    if (!needsBuild && kotlinBindings.exists()) {
+      def bindingsContent = kotlinBindings.text
+      if (!bindingsContent.contains("fetchActivityMaps")) {
+        println "Rust bindings missing HTTP functions, rebuilding..."
+        needsBuild = true
+      }
+    }
+
+    if (needsBuild) {
+      println "Building Rust library with full features..."
+      if (buildScript.exists() && installScript.exists()) {
+        exec {
+          workingDir buildScript.parentFile.parentFile
+          commandLine 'bash', buildScript.absolutePath
+        }
+        exec {
+          workingDir installScript.parentFile.parentFile
+          commandLine 'bash', installScript.absolutePath
+        }
+      } else {
+        throw new GradleException("Rust build scripts not found. Run 'npm run build:rust:android' first.")
+      }
+    } else {
+      println "Rust library up to date, skipping build."
+    }
+  }
+}
+
+// Make sure Rust is built before compiling
+tasks.matching { it.name.startsWith('compile') && it.name.contains('Kotlin') }.configureEach {
+  dependsOn buildRustLibraries
+}
+
 dependencies {
   implementation project(':expo-modules-core')
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${getKotlinVersion()}"
