--- a/rust/route-matcher/Cargo.toml
+++ b/rust/route-matcher/Cargo.toml
@@ -21,7 +21,7 @@ ffi = ["uniffi"]
 # Enable parallel processing (recommended for batch operations)
 parallel = ["rayon"]
 # Enable HTTP client for activity fetching
-http = ["reqwest", "tokio", "serde", "serde_json", "base64"]
+http = ["reqwest", "tokio", "futures", "serde", "serde_json", "base64"]
 # Enable all features
 full = ["ffi", "parallel", "http"]
 
@@ -46,6 +46,7 @@ uniffi = { version = "0.29", features = ["cli"], optional = true }
 # HTTP client for activity fetching (optional)
 reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }
 tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
+futures = { version = "0.3", optional = true }
 base64 = { version = "0.21", optional = true }
 
 # Android logging (optional, for mobile builds)
