--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo": "~54.0.30",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.12",
+    "expo-file-system": "~19.0.21",
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
@@ -57,9 +58,9 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
+    "route-matcher-native": "file:./modules/route-matcher-native",
     "victory-native": "^41.20.2",
-    "zustand": "^5.0.9",
-    "route-matcher-native": "file:./modules/route-matcher-native"
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
