--- a/modules/route-matcher-native/package.json
+++ b/modules/route-matcher-native/package.json
@@ -2,11 +2,14 @@
   "name": "route-matcher-native",
   "version": "0.1.0",
   "description": "Native Rust-powered route matching for Expo/React Native",
+  "author": "Evan Thomas <evan@evanjt.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/evanjt/veloq",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
-    "build:rust:ios": "../rust/route-matcher/scripts/build-ios.sh",
-    "build:rust:android": "../rust/route-matcher/scripts/build-android.sh",
+    "build:rust:ios": "../../rust/route-matcher/scripts/build-ios.sh",
+    "build:rust:android": "../../rust/route-matcher/scripts/build-android.sh",
     "build:rust": "npm run build:rust:ios && npm run build:rust:android"
   },
   "peerDependencies": {
