--- a/rust/route-matcher/Cargo.toml
+++ b/rust/route-matcher/Cargo.toml
@@ -49,9 +49,6 @@ tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true
 futures = { version = "0.3", optional = true }
 base64 = { version = "0.21", optional = true }
 
-# Android logging (optional, for mobile builds)
-android_logger = { version = "0.14", optional = true }
-
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.14"
 
@@ -82,6 +79,11 @@ path = "examples/basic_matching.rs"
 name = "batch_grouping"
 path = "examples/batch_grouping.rs"
 required-features = ["parallel"]
+
+[[example]]
+name = "http_benchmark"
+path = "examples/http_benchmark.rs"
+required-features = ["http"]
 
 [[bin]]
 name = "uniffi-bindgen"
