--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "npx expo start",
-    "android": "npm run build:rust:android && npx expo run:android",
-    "ios": "npm run build:rust:ios && npx expo run:ios",
-    "android:quick": "npx expo run:android",
-    "ios:quick": "npx expo run:ios",
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios",
     "web": "npx expo start --web",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "build:rust:android": "cd rust/route-matcher && ./scripts/build-android.sh && ./scripts/install-android.sh",
-    "build:rust:ios": "cd rust/route-matcher && ./scripts/build-ios.sh && ./scripts/install-ios.sh",
-    "build:rust": "npm run build:rust:android && npm run build:rust:ios",
-    "prebuild": "npm run build:rust && npx expo prebuild"
+    "rust:android": "cd rust/route-matcher && ./scripts/build-android-dev.sh",
+    "rust:android:full": "cd rust/route-matcher && ./scripts/build-android.sh && ./scripts/install-android.sh",
+    "rust:android:device": "cd rust/route-matcher && ./scripts/build-android-dev.sh arm64",
+    "rust:android:emulator": "cd rust/route-matcher && ./scripts/build-android-dev.sh x86_64",
+    "rust:ios": "cd rust/route-matcher && ./scripts/build-ios.sh && ./scripts/install-ios.sh",
+    "rust:all": "npm run rust:android:full && npm run rust:ios",
+    "prebuild": "npm run rust:all && npx expo prebuild"
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
