--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "rust:android": "cd rust/route-matcher && ./scripts/build-android-dev.sh",
     "rust:android:full": "cd rust/route-matcher && ./scripts/build-android.sh && ./scripts/install-android.sh",
     "rust:android:device": "cd rust/route-matcher && ./scripts/build-android-dev.sh arm64",
@@ -67,8 +71,14 @@
     "@types/jest": "^30.0.0",
     "@types/react": "^19.2.7",
     "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^8.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "jest-expo": "~54.0.2",
+    "prettier": "^3.4.2",
     "typescript": "^5.9.3"
   },
   "private": true
